--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
         </div>
     </footer>
     <script src="./js/main.js" type="module"></script>
-    <script src="./node_modules/chart.js/dist/chart.umd.js"></script>
-    <script src="./js/chart.js"></script>
-
+    <script src="./node_modules/chart.js/dist/chart.umd.js" type="module"></script>
+    <script src="./js/chart.js" type="module"></script>
+    
 </body>
 </html>
