atualizando cdd body

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </ul>
         </div>
     </nav>
-    <main>
+    <main class="main">
         <section class="titulo">
             <h1 class="titulo__principal">Dashboard</h1>
             <p class="titulo__data">14 - Janeiro - 2023</p>
