add javascript getdata

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main class="main">
         <section class="titulo">
             <h1 class="titulo__principal">Dashboard</h1>
-            <p class="titulo__data">14 - Janeiro - 2023</p>
+            <p class="titulo__data" data-today>14 - Janeiro - 2023</p>
         </section>
         <section class="card-boas-vindas">
             <div class="card-boas-vindas__container">
