--- a/index.html
+++ b/index.html
@@ -45,19 +45,19 @@
             <div class="container-card__financeira-card">
         <section class="card-finanaca-mes">
             <div class="card-financa-mes__conteiner">
-                <h4 class="financa-mes__titulo">Total  de gasto mês</h4>
+                <h4 class="financa-mes__titulo">Total de gastos no mês</h4>
                 <p class="card-financa-mes__valor">R$ 3000,00</p>
             </div>
         </section>
         <section class="card-finanaca-mes">
             <div class="card-financa-mes__conteiner">
-                <h4 class="financa-mes__titulo">Total de gasto no Cartão no mês</h4>
+                <h4 class="financa-mes__titulo">Total de gastos no Cartão no mês</h4>
                 <p class="card-financa-mes__valor">R$ 1300,00</p>
             </div>
         </section>
         <section class="card-finanaca-mes">
             <div class="card-financa-mes__conteiner">
-                <h4 class="financa-mes__titulo">Total de gasto de Despesas no mês</h4>
+                <h4 class="financa-mes__titulo">Total de Despesas no mês</h4>
                 <p class="card-financa-mes__valor">R$ 965,00</p>
             </div>
         </section>
@@ -66,21 +66,21 @@
     <div class="container-card__grafico-card">
         <section class="card-grafico">
             <div class="card-grafico__container">
-                <h2 class="card-grafico__titulo">Total de Gasto</h2>
+                <h2 class="card-grafico__titulo">Total de Gastos</h2>
                 <div class="card-grafico__chart"><div id="totalGasto"></div></div>
             </div>
 
         </section>
         <section class="card-grafico">
             <div class="card-grafico__container">
-                <h2 class="card-grafico__titulo">Total de Gasto do Cartão</h2>
+                <h2 class="card-grafico__titulo">Total de Gastos do Cartão</h2>
                 <div class="card-grafico__chart"><div id="GastoCartao"></div></div>
             </div>
 
         </section>
         <section class="card-grafico">
             <div class="card-grafico__container">
-                <h2 class="card-grafico__titulo">Total de Gasto no Mês</h2>
+                <h2 class="card-grafico__titulo">Total de Gastos no Mês</h2>
                 <div class="card-grafico__chart"><div id="GastosMes"></div></div>
             </div>
         </section>
@@ -88,7 +88,7 @@
     <div  class="container-card__list-ultimos-gastos">
         <section class="list-ultimos-gastos">
             <div class="lista-ultimos-gastos__container">
-                <h2 class="lista-ultimos-gastos__titulo">10 - Ultimos Gastos </h2>
+                <h2 class="lista-ultimos-gastos__titulo">10 - Últimos Gastos </h2>
                
                 <ul class="lista-ultimos-gastos__lista">
                     <li class="lista-ultimos-gastos__item">
@@ -97,12 +97,12 @@
                         <p class="lista-ultimo-gasto__data">17/01/2023</p>
                     </li>
                     <li class="lista-ultimos-gastos__item">
-                        <h3 class="lista-ultimo-gasto__item-titulo">Farmacia</h3>
+                        <h3 class="lista-ultimo-gasto__item-titulo">Farmácia</h3>
                         <p class="lista-ultimo-gasto__valor">R$ 135,00</p>
                         <p class="lista-ultimo-gasto__data">14/01/2023</p>
                     </li>
                     <li class="lista-ultimos-gastos__item">
-                        <h3 class="lista-ultimo-gasto__item-titulo">Açogue</h3>
+                        <h3 class="lista-ultimo-gasto__item-titulo">Açougue</h3>
                         <p class="lista-ultimo-gasto__valor">R$ 100,00</p>
                         <p class="lista-ultimo-gasto__data">14/01/2023</p>
                     </li>
@@ -117,7 +117,7 @@
                         <p class="lista-ultimo-gasto__data">05/01/2023</p>
                     </li>
                     <li class="lista-ultimos-gastos__item">
-                        <h3 class="lista-ultimo-gasto__item-titulo">Açogue</h3>
+                        <h3 class="lista-ultimo-gasto__item-titulo">Açougue</h3>
                         <p class="lista-ultimo-gasto__valor">R$ 237,00</p>
                         <p class="lista-ultimo-gasto__data">31/12/2022</p>
                     </li>
@@ -127,12 +127,12 @@
                         <p class="lista-ultimo-gasto__data">24/12/2022</p>
                     </li>
                     <li class="lista-ultimos-gastos__item">
-                        <h3 class="lista-ultimo-gasto__item-titulo">Paceio</h3>
+                        <h3 class="lista-ultimo-gasto__item-titulo">Passeio</h3>
                         <p class="lista-ultimo-gasto__valor">R$ 367,00</p>
                         <p class="lista-ultimo-gasto__data">19/12/2022</p>
                     </li>
                     <li class="lista-ultimos-gastos__item">
-                        <h3 class="lista-ultimo-gasto__item-titulo">Farmacia</h3>
+                        <h3 class="lista-ultimo-gasto__item-titulo">Farmácia</h3>
                         <p class="lista-ultimo-gasto__valor">R$ 175,23</p>
                         <p class="lista-ultimo-gasto__data">15/12/2022</p>
                     </li>
