--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 </head>
 <body>
     <header class="header" data-headerMenu>
-      <!--  <div class="header__container">
+    <!--  <div class="header__container">
         <button class="header__menu" id="menu-nav"><img class="header__menu-imagem" src="img/menu.svg" alt="menu"> </button>
         <img class="header__imagem-logo" src="img/Logo.png" alt="Logo Finança Pessoal">
         <div class="header__user">
            <p class="header__user-acronym">WF</p>       
-        </div>
-        </div> -->
+        </div>-->
+       
     </header>
     <nav class="nav-menu" data-headerNav>
-     <!--   <div class="nav-menu__container" data-navmenu>
+      <!--<div class="nav-menu__container" data-navmenu>
             <ul class="nav-menu__lista">
                 <li class="nav-menu__item nav-menu__item--ativo "><a href="#" class="nav-menu__link nav-menu__link--ativo">Dashboard</a></li>
                 <li class="nav-menu__item"><a href="#" class="nav-menu__link">Perfil</a></li>
@@ -27,7 +27,7 @@
                 <li class="nav-menu__item"><a href="#" class="nav-menu__link">Cartão de Credito</a></li>
                 <li class="nav-menu__item"><a href="#" class="nav-menu__link">Renda</a></li>
             </ul>
-        </div> -->
+      </div>-->
     </nav>
     <main class="main">
         <section class="titulo">
@@ -158,7 +158,7 @@
             
         </div>
     </footer>
-   <script src="../js/menu.js"></script>
+   <script src="../js/menu.js" type="module" ></script>
     <script src="./js/main.js" type="module"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="./js/totalGastoChart.js" type="module"></script>
