moficando javascript menu

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Finanças Pessoais</title>
 </head>
 <body>
-    <header class="header" data-headerMenu>
+    <header class="header" data-headerMenu data-pag="index">
     <!--  <div class="header__container">
         <button class="header__menu" id="menu-nav"><img class="header__menu-imagem" src="img/menu.svg" alt="menu"> </button>
         <img class="header__imagem-logo" src="img/Logo.png" alt="Logo Finança Pessoal">
