add Perfil e Adicionar Usuario

--- a/index.html
+++ b/index.html
@@ -151,14 +151,15 @@
 
     </main>
 
-    <footer class="footer">
-        <div class="footer__container">
+    <footer class="footer" data-footer>
+      <!--  <div class="footer__container">
            
             <h2 class="footer__titulo">Finanças Pessoais </h2>
             
-        </div>
+        </div>-->
     </footer>
     <script src="./js/menu.js" type="module" ></script>
+    <script src="../js/footer.js"></script>
     <script src="./js/main.js" type="module"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="./js/totalGastoChart.js" type="module"></script>
