--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         </div>-->
     </footer>
     <script src="./js/menu.js" type="module" ></script>
-    <script src="../js/footer.js"></script>
+    <script src="./js/footer.js"></script>
     <script src="./js/main.js" type="module"></script>
     <script src="https://www.gstatic.com/charts/loader.js"></script>
     <script src="./js/totalGastoChart.js" type="module"></script>
