add pagina despesas

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <section class="card-boas-vindas">
             <div class="card-boas-vindas__container">
-                <h2 class="card-boas-vindas__titulo">Oi, Walter</h2>
+                <h2 class="card-boas-vindas__titulo">Oi, Wagner</h2>
                 <p class="card-boas-vindas__mensagem">Não existe outro modo de conquistar o sucesso! </p>
                 <img src="img/car-boas-vindas.png" alt="imagem financeira" class="card-boas-vindas__imagem">
             </div>
